--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,5 +36,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "rules": {
+    "react/jsx-no-target-blank": [
+      "warn",
+      {
+        "allowReferrer": true
+      }
+    ]
   }
 }
